# media-toc

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs  deny.toml  update_po
.github/workflows/: CI.yml
application/: Cargo.toml  build.rs
application/src/: command_line.rs  configuration.rs  lib.rs  locale.rs
assets/: org.fengalin.media-toc.desktop
assets/icons/: render_image.py  update
assets/icons/hicolor/: icons.gresource.xml
assets/icons/src/: media-toc.blend  media-toc.blend1
assets/ui/: media-toc.ui
benches/: audio_buffer.rs  waveform_buffer.rs  waveform_renderer.rs
ci/: before_install.sh
data/icons/src/: media-toc.blend
main/: Cargo.toml
main/src/: main.rs
media/: Cargo.toml
media/benches/: audio_buffer.rs
media/src/: audio_buffer.rs  audio_channel.rs  dbl_audio_buffer.rs  duration.rs  lib.rs  playback_pipeline.rs  sample_extractor.rs  sample_index.rs  sample_index_range.rs  sample_value.rs  splitter_pipeline.rs  timestamp.rs  toc_setter_pipeline.rs
media/src/pipeline/: mod.rs  playback.rs  splitter.rs  toc_setter.rs
metadata/: Cargo.toml
metadata/src/: cue_sheet_format.rs  duration.rs  factory.rs  format.rs  lib.rs  matroska_toc_format.rs  media_info.rs  mkvmerge_text_format.rs  timestamp_4_humans.rs  toc_visitor.rs
po/: .gitignore  POTFILES.in  es.po  fr.po
renderers/: Cargo.toml
renderers/benches/: audio_buffer.rs  waveform_renderer.rs
renderers/src/: audio_buffer.rs  image.rs  lib.rs  sample_index.rs  sample_index_range.rs  sample_value.rs  timestamp.rs  waveform_buffer.rs  waveform_drawer.rs  waveform_image.rs  waveform_renderer.rs  waveform_tracer.rs
renderers/src/generic/: dbl_renderer.rs  mod.rs  renderer.rs
renderers/src/plugin/: bin.rs  mod.rs  renderer.rs
renderers/src/waveform/: image.rs  mod.rs  renderer.rs
res/icons/: render_image.py  update
res/ui/: media-toc.ui  ui.gresource.xml
src/: audio_controller.rs  controller_ext.rs  main.rs  main_controller.rs  video_controller.rs
src/application/: command_line.rs  configuration.rs  locale.rs  mod.rs
src/media/: aligned_image.rs  audio_buffer.rs  audio_channel.rs  chapter.rs  context.rs  dbl_audio_buffer.rs  duration.rs  export_context.rs  media_info.rs  mod.rs  playback_context.rs  playback_pipeline.rs  sample_extractor.rs  sample_index.rs  sample_index_range.rs  samples_extractor.rs  splitter_context.rs  splitter_pipeline.rs  timestamp.rs  toc_setter_context.rs  toc_setter_pipeline.rs  waveform_buffer.rs
src/metadata/: chapter.rs  chapters_boundaries.rs  cue_sheet_format.rs  factory.rs  format.rs  matroska_toc_format.rs  media_info.rs  mkvmerge_text_format.rs  mod.rs  timestamp.rs  toc_visitor.rs
src/renderers/: waveform_buffer.rs  waveform_image.rs
src/toc/: chapter.rs  cue_sheet_format.rs  exporter.rs  factory.rs  format.rs  importer.rs  matroska_toc_format.rs  mkvmerge_text_format.rs  mod.rs  timestamp.rs
src/ui/: audio_controller.rs  audio_dispatcher.rs  chapter_tree_manager.rs  chapters_boundaries.rs  controller_ext.rs  export_controller.rs  export_dispatcher.rs  image.rs  image_surface.rs  info_bar_controller.rs  info_controller.rs  info_dispatcher.rs  macros.rs  main_controller.rs  main_dispatcher.rs  media-toc-export.ui  media-toc.ui  media_controller.rs  mod.rs  output_base_controller.rs  output_base_dispatcher.rs  perspective_controller.rs  perspective_dispatcher.rs  split_controller.rs  split_dispatcher.rs  streams_controller.rs  streams_dispatcher.rs  ui_event.rs  video_controller.rs  video_dispatcher.rs  waveform_buffer.rs  waveform_image.rs  waveform_renderer.rs
test/locale/en/LC_MESSAGES/: media-toc-test.mo
test/locale/fr/LC_MESSAGES/: media-toc-test.mo
test/po/: en.po  fr.po
ui/: Cargo.toml
ui/src/: audio_controller.rs  audio_dispatcher.rs  chapter_tree_manager.rs  chapters_boundaries.rs  export_controller.rs  export_dispatcher.rs  info_bar_controller.rs  info_controller.rs  info_dispatcher.rs  lib.rs  macros.rs  main_controller.rs  main_dispatcher.rs  output_base_controller.rs  output_base_dispatcher.rs  perspective_controller.rs  perspective_dispatcher.rs  split_controller.rs  streams_controller.rs  streams_dispatcher.rs  ui_event.rs  video_controller.rs  video_dispatcher.rs  waveform_with_overlay.rs
ui/src/audio/: controller.rs  dispatcher.rs  mod.rs  waveform_with_overlay.rs
ui/src/export/: controller.rs  dispatcher.rs
ui/src/generic_output/: controller.rs  dispatcher.rs  mod.rs
ui/src/info/: chapter_tree_manager.rs  chapters_boundaries.rs  controller.rs  dispatcher.rs  mod.rs
ui/src/info_bar/: controller.rs  dispatcher.rs  mod.rs
ui/src/main/: controller.rs  dispatcher.rs
ui/src/main_panel/: controller.rs  dispatcher.rs  mod.rs
ui/src/perspective/: controller.rs  dispatcher.rs
ui/src/playback/: dispatcher.rs  mod.rs
ui/src/split/: controller.rs  dispatcher.rs  mod.rs
ui/src/streams/: controller.rs  dispatcher.rs  mod.rs
ui/src/video/: controller.rs  dispatcher.rs  mod.rs
