[workspace]

members = [
  "application",
  "main",
  "media",
  "metadata",
  "renderers",
  "ui",
]

[workspace.dependencies]
bitflags = "1"
byteorder = "1"
cairo = { package = "cairo-rs", version = "0.16.7" }
clap = "4.1"
cfg-if = "1"
dasp_sample = "0.11"
directories = "4.0.1"
gettext = { package = "gettext-rs", version = "0.7" }
env_logger = "0.10"
futures = "0.3.25"
gst = { package = "gstreamer", version = "0.19.7", features = ["v1_16"] }
gst-audio = { package = "gstreamer-audio", version = "0.19.4", features = ["v1_16"] }
gst-plugin-version-helper = { version = "0.7.5" }
gtk = { version = "0.16.2", features = ["v3_24"] }
image = "0.24.5"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
nom = "7.1"
once_cell = "1"
ron = "0.8"
serde = "1"
serde_derive = "1"
smallvec = "1.8"

[profile.bench]
#debug = true

[profile.release]
lto = true
