[package]
authors = ["François Laignel <fengalin@free.fr>"]
description = "application modules for media-toc"
edition = '2018'
homepage = "https://github.com/fengalin/media-toc"
keywords = ["multimedia", "chapter", "table-of-contents", "gtk3", "gstreamer"]
license = "MIT"
name = "media-toc-application"
readme = "README.md"
repository = "https://github.com/fengalin/media-toc"
version = "0.7.0"

build = "build.rs"

[dependencies]
clap = "2"
directories = "3"
gettext-rs = { version = "0.5", features = ["gettext-system"] }
lazy_static = "1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
ron = "0.6"
serde = "1"
serde_derive = "1"

[build-dependencies]
directories = "3"
lazy_static = "1"
