[package]
authors = ["François Laignel <fengalin@free.fr>"]
description = "application modules for media-toc"
edition = '2021'
homepage = "https://github.com/fengalin/media-toc"
keywords = ["multimedia", "chapter", "table-of-contents", "gtk3", "gstreamer"]
license = "MIT"
name = "media-toc-application"
readme = "README.md"
repository = "https://github.com/fengalin/media-toc"
version = "0.7.99"

build = "build.rs"

[dependencies]
clap = { version = "3", features= ["unicode"] }
directories = "4.0.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
once_cell = "1.0"
ron = "0.7"
serde = "1"
serde_derive = "1"

[build-dependencies]
directories = "4.0.1"
once_cell = "1.0"

