[package]
authors = ["François Laignel <fengalin@free.fr>"]
description = "application modules for media-toc"
edition = '2021'
homepage = "https://github.com/fengalin/media-toc"
keywords = ["multimedia", "chapter", "table-of-contents", "gtk3", "gstreamer"]
license = "MIT"
name = "media-toc-application"
readme = "README.md"
repository = "https://github.com/fengalin/media-toc"
version = "0.7.99"

build = "build.rs"

[dependencies]
clap = { workspace = true, features= ["string", "unicode"] }
cfg-if = { workspace = true }
directories = { workspace = true }
gettext = { workspace = true, optional = true, features = ["gettext-system"] }
log = { workspace = true }
once_cell = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }

[build-dependencies]
directories = { workspace = true }
once_cell = { workspace = true }
