[package]
authors = ["François Laignel <fengalin@free.fr>"]
description = "Build a table of contents from a media file or split a media file into chapters"
edition = '2021'
homepage = "https://github.com/fengalin/media-toc"
keywords = ["multimedia", "chapter", "table-of-contents", "gtk3", "gstreamer"]
license = "MIT"
name = "media-toc"
readme = "README.md"
repository = "https://github.com/fengalin/media-toc"
version = "0.7.99"

[[bin]]
name = "media-toc"
path = "src/main.rs"

[dependencies]
application = { path = "../application", package = "media-toc-application"  }
env_logger = { workspace = true }
gtk = { workspace = true }
log = { workspace = true }
ui = { path = "../ui", package = "media-toc-ui"  }
