[package]
authors = ["François Laignel <fengalin@free.fr>"]
description = "media modules for media-toc"
edition = '2018'
homepage = "https://github.com/fengalin/media-toc"
keywords = ["multimedia", "chapter", "table-of-contents", "gtk3", "gstreamer"]
license = "MIT"
name = "media-toc-media"
repository = "https://github.com/fengalin/media-toc"
version = "0.7.99"

[lib]
name = "mediatocmedia"
path = "src/lib.rs"

[dependencies]
byteorder = "1"
futures = "0.3"
gettext-rs = { version = "0.5", features = ["gettext-system"] }
glib = { git = "https://github.com/gtk-rs/gtk-rs" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
lazy_static = "1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
metadata = { path = "../metadata", package = "media-toc-metadata" }
sample = "0.11"

[features]
trace-playback-queues = ["default"]
default = []
