[package]
authors = ["François Laignel <fengalin@free.fr>"]
description = "media modules for media-toc"
edition = '2018'
homepage = "https://github.com/fengalin/media-toc"
keywords = ["multimedia", "chapter", "table-of-contents", "gtk3", "gstreamer"]
license = "MIT"
name = "media-toc-media"
repository = "https://github.com/fengalin/media-toc"
version = "0.7.99"

[lib]
name = "mediatocmedia"
path = "src/lib.rs"

[dependencies]
futures = "0.3.19"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib = { git = "https://github.com/gtk-rs/gtk-rs" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
metadata = { path = "../metadata", package = "media-toc-metadata" }
renderers = { path = "../renderers", package = "media-toc-renderers"  }

[features]
trace-playback-queues = ["default"]
default = []
