[package]
authors = ["François Laignel <fengalin@free.fr>"]
description = "media modules for media-toc"
edition = '2021'
homepage = "https://github.com/fengalin/media-toc"
keywords = ["multimedia", "chapter", "table-of-contents", "gtk3", "gstreamer"]
license = "MIT"
name = "media-toc-media"
repository = "https://github.com/fengalin/media-toc"
version = "0.7.99"

[lib]
name = "mediatocmedia"
path = "src/lib.rs"

[dependencies]
application = { path = "../application", package = "media-toc-application"  }
futures = { workspace = true }
gst = { workspace = true }
log = { workspace = true }
metadata = { path = "../metadata", package = "media-toc-metadata" }
renderers = { path = "../renderers", package = "media-toc-renderers"  }

[features]
trace-playback-queues = ["default"]
default = []
