[package]
authors = ["François Laignel <fengalin@free.fr>"]
description = "metadata modules for media-toc"
edition = '2021'
homepage = "https://github.com/fengalin/media-toc"
keywords = ["multimedia", "chapter", "table-of-contents", "gtk3", "gstreamer"]
license = "MIT"
name = "media-toc-metadata"
readme = "README.md"
repository = "https://github.com/fengalin/media-toc"
version = "0.7.99"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gst = { package = "gstreamer", version = "0.17", features = ["v1_10"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
nom = "7"
once_cell = "1.0"
