[package]
authors = ["François Laignel <fengalin@free.fr>"]
description = "metadata modules for media-toc"
edition = '2021'
homepage = "https://github.com/fengalin/media-toc"
keywords = ["multimedia", "chapter", "table-of-contents", "gtk3", "gstreamer"]
license = "MIT"
name = "media-toc-metadata"
readme = "README.md"
repository = "https://github.com/fengalin/media-toc"
version = "0.7.99"

[dependencies]
application = { path = "../application", package = "media-toc-application"  }
gst = { workspace = true }
log = { workspace = true }
nom = { workspace = true }
once_cell = { workspace = true }
