[package]
authors = ["François Laignel <fengalin@free.fr>"]
description = "renderers modules for media-toc"
edition = '2021'
homepage = "https://github.com/fengalin/media-toc"
keywords = ["multimedia", "chapter", "table-of-contents", "gtk3", "gstreamer"]
license = "MIT"
name = "media-toc-renderers"
readme = "README.md"
repository = "https://github.com/fengalin/media-toc"
version = "0.7.99"

[lib]
name = "mediatocrenderers"
path = "src/lib.rs"

[dependencies]
byteorder = "1"
cairo = { package = "cairo-rs", version = "0.15.1" }
gst = { package = "gstreamer", version = "0.18.1", features = ["v1_16"] }
gst-audio = { package = "gstreamer-audio", version = "0.18.0", features = ["v1_16"] }
metadata = { path = "../metadata", package = "media-toc-metadata" }
once_cell = "1.0"
image = "0.23.14"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
dasp_sample = "0.11"
smallvec = "1.8"

[dev-dependencies]
byteorder = "1"
cairo = { package = "cairo-rs", version = "0.15.1", features = ["png"] }
gst-audio = { package = "gstreamer-audio", version = "0.18.0", features = ["v1_16"] }

[build-dependencies]
gst-plugin-version-helper = { version = "0.7.3" }
