[package]
authors = ["François Laignel <fengalin@free.fr>"]
description = "renderers modules for media-toc"
edition = '2021'
homepage = "https://github.com/fengalin/media-toc"
keywords = ["multimedia", "chapter", "table-of-contents", "gtk3", "gstreamer"]
license = "MIT"
name = "media-toc-renderers"
readme = "README.md"
repository = "https://github.com/fengalin/media-toc"
version = "0.7.99"

[lib]
name = "mediatocrenderers"
path = "src/lib.rs"

[dependencies]
byteorder = { workspace = true }
cairo = { workspace = true }
dasp_sample = { workspace = true }
gst = { workspace = true }
gst-audio = { workspace = true }
metadata = { path = "../metadata", package = "media-toc-metadata" }
once_cell = { workspace = true }
image = { workspace = true }
log = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
cairo = { workspace = true, features = ["png"] }
gst-audio = { workspace = true }

[build-dependencies]
gst-plugin-version-helper = { workspace = true }
