[package]
authors = ["François Laignel <fengalin@free.fr>"]
description = "application modules for media-toc"
edition = '2021'
homepage = "https://github.com/fengalin/media-toc"
keywords = ["multimedia", "chapter", "table-of-contents", "gtk3", "gstreamer"]
license = "MIT"
name = "media-toc-ui"
readme = "README.md"
repository = "https://github.com/fengalin/media-toc"
version = "0.7.99"

[dependencies]
application = { path = "../application", package = "media-toc-application"  }
bitflags = "1"
futures = "0.3.19"
gst = { package = "gstreamer", version = "0.18.1", features = ["v1_16"] }
gst-audio = { package = "gstreamer-audio", version = "0.18.0", features = ["v1_16"] }
gtk = { version = "0.15.2", features = ["v3_24"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
media = { path = "../media", package = "media-toc-media"  }
metadata = { path = "../metadata", package = "media-toc-metadata"  }
renderers = { path = "../renderers", package = "media-toc-renderers"  }
ron = "0.7"
serde = "1"
serde_derive = "1"

[dev-dependencies]
byteorder = "1"
smallvec = "1.8"
