[package]
authors = ["François Laignel <fengalin@free.fr>"]
description = "application modules for media-toc"
edition = '2021'
homepage = "https://github.com/fengalin/media-toc"
keywords = ["multimedia", "chapter", "table-of-contents", "gtk3", "gstreamer"]
license = "MIT"
name = "media-toc-ui"
readme = "README.md"
repository = "https://github.com/fengalin/media-toc"
version = "0.7.99"

[dependencies]
application = { path = "../application", package = "media-toc-application"  }
bitflags = { workspace = true }
futures = { workspace = true }
gst = { workspace = true }
gst-audio = { workspace = true }
gtk = { workspace = true }
log = { workspace = true }
media = { path = "../media", package = "media-toc-media"  }
metadata = { path = "../metadata", package = "media-toc-metadata"  }
renderers = { path = "../renderers", package = "media-toc-renderers"  }
ron = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }

[dev-dependencies]
byteorder = { workspace = true }
smallvec = { workspace = true }
